# streaming_playground

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  pyproject.toml
local_kafka/: readme.md
local_kafka/docker/: readme.md
local_kafka/rancher/: kafka.yaml  readme.md
src/streaming_playground/: create_samples.py  spark_delta_to_delta.py  spark_delta_to_kafka.py  spark_delta_vs_kafka.py
tests/: conftest.py  test_create_samples.py  test_delta_to_delta.py  test_delta_to_kafka.py  test_fixtures.py
